# ledgermini

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/core/: database.h  exportmanager.h  report_generator.h  validationrules.h
include/gui/: accountcardwidget.h  advancedfilterwidget.h  mainwindow.h  operationsjournalwidget.h  reportwidget.h  searchwidget.h  tableactions.h
include/gui/dialogs/: addcounterpartydialog.h  addeditaccountdialog.h  addtransactiondialog.h  editcounterpartydialog.h  edittemplatedialog.h  edittransactiondialog.h  managetemplatesdialog.h
resources/sql/: fix_counterparties.sql  init.sql
src/: CMakeLists.txt  main.cpp
src/core/: database.cpp  exportmanager.cpp  report_generator.cpp  validationrules.cpp
src/gui/: accountcardwidget.cpp  advancedfilterwidget.cpp  mainwindow.cpp  operationsjournalwidget.cpp  reportwidget.cpp  searchwidget.cpp  tableactions.cpp
src/gui/dialogs/: addcounterpartydialog.cpp  addeditaccountdialog.cpp  addtransactiondialog.cpp  editcounterpartydialog.cpp  edittemplatedialog.cpp  edittransactiondialog.cpp  managetemplatesdialog.cpp
tests/: CMakeLists.txt
